src/main/java/de/fuberlin/wiwiss/r2r/parser/SourcePatternRewriterParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g 2010-04-18 18:51:50

  package de.fuberlin.wiwiss.r2r.parser;
  
  import java.util.Set;
  import java.util.HashSet;
  import java.util.Map;
  import java.util.HashMap;
  import de.fuberlin.wiwiss.r2r.*;
  import com.hp.hpl.jena.util.PrintUtil;
  import de.fuberlin.wiwiss.r2r.parser.ParseException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class SourcePatternRewriterParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "OPTIONAL", "GRAPH", "UNION", "FILTER", "NIL", "VAR1", "VAR2", "STR", "LANG", "LANGMATCHES", "DATATYPE", "BOUND", "SAMETERM", "ISIRI", "ISURI", "ISBLANK", "ISLITERAL", "REGEX", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "TRUE", "FALSE", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "IRI_REF", "PNAME_LN", "BLANK_NODE_LABEL", "ANON", "G", "R", "A", "P", "H", "S", "T", "I", "U", "O", "N", "L", "M", "C", "E", "B", "K", "D", "F", "Y", "X", "J", "Q", "V", "W", "Z", "PN_PREFIX", "PNAME_NS", "PN_LOCAL", "VARNAME", "EXPONENT", "ECHAR", "WS", "PN_CHARS_U", "PN_CHARS_BASE", "PN_CHARS", "HEX", "COMMENT", "'.'", "'{'", "'}'", "'('", "','", "')'", "';'", "'a'", "'['", "']'", "'||'", "'&&'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", "'^^'"
    };
    public static final int EXPONENT=72;
    public static final int GRAPH=5;
    public static final int REGEX=21;
    public static final int PNAME_LN=39;
    public static final int EOF=-1;
    public static final int VARNAME=71;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int ISLITERAL=20;
    public static final int T__92=92;
    public static final int T__90=90;
    public static final int LANGMATCHES=13;
    public static final int DOUBLE=25;
    public static final int PN_CHARS_U=75;
    public static final int COMMENT=79;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int DOUBLE_POSITIVE=28;
    public static final int BOUND=15;
    public static final int T__97=97;
    public static final int ISIRI=17;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int D=59;
    public static final int E=56;
    public static final int F=60;
    public static final int G=42;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int A=44;
    public static final int T__82=82;
    public static final int B=57;
    public static final int T__83=83;
    public static final int C=55;
    public static final int L=53;
    public static final int M=54;
    public static final int N=52;
    public static final int O=51;
    public static final int H=46;
    public static final int I=49;
    public static final int J=63;
    public static final int BLANK_NODE_LABEL=40;
    public static final int K=58;
    public static final int U=50;
    public static final int T=48;
    public static final int W=66;
    public static final int V=65;
    public static final int Q=64;
    public static final int P=45;
    public static final int S=47;
    public static final int R=43;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int Y=61;
    public static final int ISBLANK=19;
    public static final int T__88=88;
    public static final int X=62;
    public static final int Z=67;
    public static final int WS=74;
    public static final int NIL=8;
    public static final int INTEGER_POSITIVE=26;
    public static final int STRING_LITERAL2=35;
    public static final int FILTER=7;
    public static final int STRING_LITERAL1=34;
    public static final int PN_CHARS=77;
    public static final int DATATYPE=14;
    public static final int DOUBLE_NEGATIVE=31;
    public static final int FALSE=33;
    public static final int LANG=12;
    public static final int IRI_REF=38;
    public static final int ISURI=18;
    public static final int STR=11;
    public static final int SAMETERM=16;
    public static final int HEX=78;
    public static final int T__103=103;
    public static final int DECIMAL_POSITIVE=27;
    public static final int INTEGER=23;
    public static final int INTEGER_NEGATIVE=29;
    public static final int PN_LOCAL=70;
    public static final int PNAME_NS=69;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int TRUE=32;
    public static final int UNION=6;
    public static final int ECHAR=73;
    public static final int OPTIONAL=4;
    public static final int ANON=41;
    public static final int PN_CHARS_BASE=76;
    public static final int STRING_LITERAL_LONG2=37;
    public static final int DECIMAL=24;
    public static final int VAR1=9;
    public static final int VAR2=10;
    public static final int STRING_LITERAL_LONG1=36;
    public static final int DECIMAL_NEGATIVE=30;
    public static final int PN_PREFIX=68;
    public static final int LANGTAG=22;

    // delegates
    // delegators


        public SourcePatternRewriterParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SourcePatternRewriterParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("SourcePatternRewriterParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return SourcePatternRewriterParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g"; }


      StringGenerator variableGenerator = null;
      HashMap<String, String> variableRewriter = null;
      
      public void setVariableGenerator(StringGenerator stringGenerator) {
        this.variableGenerator = stringGenerator;
        variableRewriter = new HashMap<String, String>();
      }
      
      public void recover(IntStream input, RecognitionException re) {
        String hdr = getErrorHeader(re);
        String msg = getErrorMessage(re, this.getTokenNames());
        
        throw new ParseException(hdr + " " + msg);
      }
      
      public void reportError(RecognitionException re) {
        String hdr = getErrorHeader(re);
        String msg = getErrorMessage(re, this.getTokenNames());
        
        throw new ParseException(hdr + " " + msg);
      }
      
      public String rewriteVariable(String inVar) {
        if(variableRewriter==null || inVar.equals("SUBJ"))
          return inVar;

        String outVar = variableRewriter.get(inVar);
        if(outVar!=null)
          return outVar;
          
        outVar = variableGenerator.nextString();
        variableRewriter.put(inVar, outVar);
        return outVar; 
      }


    public static class rewrittenSourcePattern_return extends ParserRuleReturnScope {
        public String rewrittenSourcePattern;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "rewrittenSourcePattern"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:78:1: rewrittenSourcePattern returns [String rewrittenSourcePattern] : sourcePattern ;
    public final SourcePatternRewriterParser.rewrittenSourcePattern_return rewrittenSourcePattern() throws RecognitionException {
        SourcePatternRewriterParser.rewrittenSourcePattern_return retval = new SourcePatternRewriterParser.rewrittenSourcePattern_return();
        retval.start = input.LT(1);

        SourcePatternRewriterParser.sourcePattern_return sourcePattern1 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:79:3: ( sourcePattern )
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:79:5: sourcePattern
            {
            pushFollow(FOLLOW_sourcePattern_in_rewrittenSourcePattern74);
            sourcePattern1=sourcePattern();

            state._fsp--;

             retval.rewrittenSourcePattern = (sourcePattern1!=null?input.toString(sourcePattern1.start,sourcePattern1.stop):null); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rewrittenSourcePattern"

    public static class sourcePattern_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "sourcePattern"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:82:1: sourcePattern : ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* EOF ;
    public final SourcePatternRewriterParser.sourcePattern_return sourcePattern() throws RecognitionException {
        SourcePatternRewriterParser.sourcePattern_return retval = new SourcePatternRewriterParser.sourcePattern_return();
        retval.start = input.LT(1);

        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:3: ( ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* EOF )
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:5: ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* EOF
            {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:5: ( triplesBlock )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=NIL && LA1_0<=VAR2)||(LA1_0>=INTEGER && LA1_0<=ANON)||LA1_0==83||LA1_0==88) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:5: triplesBlock
                    {
                    pushFollow(FOLLOW_triplesBlock_in_sourcePattern89);
                    triplesBlock();

                    state._fsp--;


                    }
                    break;

            }

            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:19: ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=OPTIONAL && LA5_0<=GRAPH)||LA5_0==FILTER||LA5_0==81) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:20: ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )?
            	    {
            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:20: ( graphPatternNotTriples | filter )
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( ((LA2_0>=OPTIONAL && LA2_0<=GRAPH)||LA2_0==81) ) {
            	        alt2=1;
            	    }
            	    else if ( (LA2_0==FILTER) ) {
            	        alt2=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:21: graphPatternNotTriples
            	            {
            	            pushFollow(FOLLOW_graphPatternNotTriples_in_sourcePattern94);
            	            graphPatternNotTriples();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:46: filter
            	            {
            	            pushFollow(FOLLOW_filter_in_sourcePattern98);
            	            filter();

            	            state._fsp--;


            	            }
            	            break;

            	    }

            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:54: ( '.' )?
            	    int alt3=2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0==80) ) {
            	        alt3=1;
            	    }
            	    switch (alt3) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:54: '.'
            	            {
            	            match(input,80,FOLLOW_80_in_sourcePattern101); 

            	            }
            	            break;

            	    }

            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:59: ( triplesBlock )?
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( ((LA4_0>=NIL && LA4_0<=VAR2)||(LA4_0>=INTEGER && LA4_0<=ANON)||LA4_0==83||LA4_0==88) ) {
            	        alt4=1;
            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:83:59: triplesBlock
            	            {
            	            pushFollow(FOLLOW_triplesBlock_in_sourcePattern104);
            	            triplesBlock();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_sourcePattern110); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sourcePattern"

    public static class wherePattern_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "wherePattern"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:86:1: wherePattern : '{' ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* '}' ;
    public final SourcePatternRewriterParser.wherePattern_return wherePattern() throws RecognitionException {
        SourcePatternRewriterParser.wherePattern_return retval = new SourcePatternRewriterParser.wherePattern_return();
        retval.start = input.LT(1);

        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:3: ( '{' ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* '}' )
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:5: '{' ( triplesBlock )? ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )* '}'
            {
            match(input,81,FOLLOW_81_in_wherePattern123); 
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:9: ( triplesBlock )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=NIL && LA6_0<=VAR2)||(LA6_0>=INTEGER && LA6_0<=ANON)||LA6_0==83||LA6_0==88) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:9: triplesBlock
                    {
                    pushFollow(FOLLOW_triplesBlock_in_wherePattern125);
                    triplesBlock();

                    state._fsp--;


                    }
                    break;

            }

            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:23: ( ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )? )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=OPTIONAL && LA10_0<=GRAPH)||LA10_0==FILTER||LA10_0==81) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:24: ( graphPatternNotTriples | filter ) ( '.' )? ( triplesBlock )?
            	    {
            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:24: ( graphPatternNotTriples | filter )
            	    int alt7=2;
            	    int LA7_0 = input.LA(1);

            	    if ( ((LA7_0>=OPTIONAL && LA7_0<=GRAPH)||LA7_0==81) ) {
            	        alt7=1;
            	    }
            	    else if ( (LA7_0==FILTER) ) {
            	        alt7=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 7, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt7) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:25: graphPatternNotTriples
            	            {
            	            pushFollow(FOLLOW_graphPatternNotTriples_in_wherePattern130);
            	            graphPatternNotTriples();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:50: filter
            	            {
            	            pushFollow(FOLLOW_filter_in_wherePattern134);
            	            filter();

            	            state._fsp--;


            	            }
            	            break;

            	    }

            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:58: ( '.' )?
            	    int alt8=2;
            	    int LA8_0 = input.LA(1);

            	    if ( (LA8_0==80) ) {
            	        alt8=1;
            	    }
            	    switch (alt8) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:58: '.'
            	            {
            	            match(input,80,FOLLOW_80_in_wherePattern137); 

            	            }
            	            break;

            	    }

            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:63: ( triplesBlock )?
            	    int alt9=2;
            	    int LA9_0 = input.LA(1);

            	    if ( ((LA9_0>=NIL && LA9_0<=VAR2)||(LA9_0>=INTEGER && LA9_0<=ANON)||LA9_0==83||LA9_0==88) ) {
            	        alt9=1;
            	    }
            	    switch (alt9) {
            	        case 1 :
            	            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\SourcePatternRewriter.g:87:63: triplesBlock
            	            {
            	            pushFollow(FOLLOW_triplesBlock_in_wherePattern140);
            	            triplesBlock();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            match(input,82,FOLLOW_82_in_wherePattern146); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "wherePattern"

